get(...) ipv getLast()